<resources>

    <!--App Name -->

    <string name="app_name">Blocly</string>

    <!-- View Strings -->

    <string name="placeholder_headline">New York Times</string>
    <string name="placeholder_content">A giant squid appeared abruptly today in lower Manhattan.
        The squid appeared peaceful at first but violence quickly escalated after a tourist
        attempted to have their photo taken with the \'big city octopus\'.</string>
    <string name="visit_site">visit site</string>

    <!-- Drawer Strings -->

    <string name="navigation_option_inbox">Inbox</string>
    <string name="navigation_option_favorites">Favorites</string>
    <string name="navigation_option_archived">Archived</string>

    <!-- Action Bar Strings -->

    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_mark_as_read">Mark all as read</string>
    <string name="menu_visit_site">Visit Site</string>

    <!-- Sharing Message -->

    <string name ="share_chooser_title">Share with...</string>
    <string name="menu_archive">Archive</string>
    <string name="menu_favorite">Favorite</string>

</resources>
