<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_visit_site"
        android:icon="@drawable/ic_visit_site_selector"
        android:title="@string/menu_visit_site"
        android:orderInCategory="0"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_archive"
        android:icon="@drawable/btn_check_checkbox"
        android:title="@string/menu_archive"
        android:orderInCategory="1"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/btn_star_checkbox"
        android:title="@string/menu_favorite"
        android:orderInCategory="2"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_selector"
        android:title="@string/menu_share"
        android:orderInCategory="3"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_selector"
        android:title="@string/menu_search"
        android:orderInCategory="4"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_refresh"
        android:title="@string/menu_refresh"
        android:orderInCategory="5"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_mark_as_read"
        android:title="@string/menu_mark_as_read"
        android:orderInCategory="6"
        app:showAsAction="never"/>

</menu>